deployment/jupiternotebook/kustomize/base/deployment-manifest/deployment-jupyter.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jupyter-notebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-notebook
  template:
    metadata:
      labels:
        app: jupyter-notebook
      annotations:
        openshift.openshift.io/restartedAt: '2024-03-05T20:55:35.280Z'
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - name: jupyter-notebook
          image: 'quay.io/osclimate/notebook:1.0'
          ports:
            - containerPort: 8888
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: jupyter-notebooks
              mountPath: /home/jovyan/work
            - name: jupyter-notebooks
              mountPath: /home/jovyan/
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      volumes:
        - name: jupyter-notebooks
          persistentVolumeClaim:
            claimName: jupyter-notebooks-pvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
