deployment/jupiternotebook/kustomize/base/deployment-manifest/service-jupiter.yaml
kind: Service
apiVersion: v1
metadata:
  name: jupyter-notebook-service
spec:
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: jupyter-notebook
